--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "roam-plugin-template",
+  "name": "roam-inline-icon",
   "version": "0.0.0",
   "main": "extension.js",
   "scripts": {
